2006-02-04  k

	* lib/Perl/Repository/APC.pm: Property set for release after_177
	* Makefile.PL: typo in release target
	* lib/Perl/Repository/APC.pm: Property set for release after_175
	* Makefile.PL, t/scripts.t: introduce the release target; fix the 
	  script.t test to accept --help as an alternative to --h
	* lib/Perl/Repository/APC.pm: Property set for release after_173
	* FAQ, Makefile.PL, eg/Makefile, scripts/binsearchaperl: add the 
	  cachefilter option to binsearchaperl; add entry to the FAQ about 
	  Module::CoreList; write a nicer ChangeLog file

2006-01-02  k

	* eg/Makefile, eg/relocate-perl.pl: simple script to let an 
	  installed perl live in a different directory

2005-12-03  k

	* eg/Makefile: blah

2005-11-30  k

	* lib/Perl/Repository/APC.pm: Property set for release after_169
	* MANIFEST, Releasenotes: forgot t/pod.t in the manifest
	* lib/Perl/Repository/APC.pm: Property set for release after_167
	* MANIFEST, Releasenotes, eg/trimtrees.pl: MANIFEST, Releasenotes: 
	  Add Releasenotes
	  eg/trimtrees.pl: Add workaround bug in File::Compare
	* t/pod.t: add a Test::Pod test

2005-11-18  k

	* eg/trimtrees.pl: now he dies are also dumpvalued
	* eg/trimtrees.pl, t/trimtrees.t: count $usedspc correctly when a 
	  file is not readable, extend tests to control the effect at 
	  least viaually
	* eg/trimtrees.pl: counting also files we cannot read
	* eg/trimtrees.pl, t/trimtrees.t: improve error messages with 
	  dumpvalue against strange filenames and more $!; spotted a 
	  missing close; added tests against the error messages except for 
	  the compare message because I cannot produce it (yet)

2005-11-17  k

	* eg/trimtrees.pl: one nice senence fr the docs
	* MANIFEST.SKIP, eg/trimtrees.pl, t/trimtrees.t: extend the 
	  maxlinks semantics to let us prepare a linktree to a subsequent 
	  cp -al

2005-11-16  k

	* t/trimtrees.t: add getopt to the testscript so we an use it to 
	  test maxlinks

2005-11-12  k
