@@ -1,18 +1,20 @@
-\B\.svn\b
-^ChangeLog$
-^MANIFEST\.bak
-^Makefile$
-^blib/
-^MakeMaker-\d
-^pm_to_blib$
 # Avoid temp and backup files.
-~$
-\.old$
-\#$
-^\.#
-^DIST/
-\bttt\b
 (^|\./)tmp
-^Fci\.txt$
 @
-^Perl-Repository-APC-.*\.tar.gz$
+\#$
+\.old$
+\B\.svn\b
+\bttt\b
+^.lwpcookies
+^.releaserc
+^ChangeLog.svn$
+^DIST/
+^Fci\.txt$
+^MANIFEST\.bak
+^MakeMaker-\d
+^Makefile$
+^Perl-Repository-APC-
+^\.#
+^blib/
+^pm_to_blib$
+~$
